testsuite/tests/indexed-types/should_fail/T2693.stderr

T2693.hs:12:15: error:
    Couldn't match expected type ‘(a8, b1)’ with actual type ‘TFn a6’
    The type variables ‘b1’, ‘a6’, ‘a8’ are ambiguous
    Relevant bindings include n :: a8 (bound at T2693.hs:12:7)
    In the first argument of ‘fst’, namely ‘x’
    In the first argument of ‘(+)’, namely ‘fst x’

T2693.hs:12:23: error:
    Couldn't match expected type ‘(a8, b2)’ with actual type ‘TFn a7’
    The type variables ‘b2’, ‘a7’, ‘a8’ are ambiguous
    Relevant bindings include n :: a8 (bound at T2693.hs:12:7)
    In the first argument of ‘fst’, namely ‘x’
    In the second argument of ‘(+)’, namely ‘fst x’

T2693.hs:19:15: error:
    Couldn't match expected type ‘(a5, b0)’ with actual type ‘TFn a2’
    The type variables ‘b0’, ‘a2’, ‘a5’ are ambiguous
    Relevant bindings include n :: a5 (bound at T2693.hs:19:7)
    In the first argument of ‘fst’, namely ‘x’
    In the first argument of ‘(+)’, namely ‘fst x’

T2693.hs:19:23: error:
    Couldn't match expected type ‘(a3, a5)’ with actual type ‘TFn a4’
    The type variables ‘a3’, ‘a4’, ‘a5’ are ambiguous
    Relevant bindings include n :: a5 (bound at T2693.hs:19:7)
    In the first argument of ‘snd’, namely ‘x’
    In the second argument of ‘(+)’, namely ‘snd x’

T2693.hs:29:20: error:
    Couldn't match type ‘TFn a0’ with ‘PVR a1’
    The type variables ‘a0’, ‘a1’ are ambiguous
    Expected type: () -> Maybe (PVR a1)
      Actual type: () -> Maybe (TFn a0)
    In the first argument of ‘mapM’, namely ‘g’
    In a stmt of a 'do' block: pvs <- mapM g undefined
